--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,7 @@ Compile NSO Packages:
     - mkdir -p release
     - make -C packages/config-dns/src clean all || exit 1
     - make -C packages/config-ntp/src clean all || exit 1
-    - cp -af packages/config-dns/ release/
-    - cp -af packages/config-ntp/ release/
+    - cp -af packages/* release/
   artifacts:
     paths:
       - release/
@@ -48,13 +47,10 @@ Test config-dns Package:
     - ln -s /opt/ncs/current/packages/neds/cisco-ios-cli-3.8 /nso/run/packages/cisco-ios-cli
     - /run-nso.sh > /dev/null 2>&1 &
     - bash nso/check_nso_readiness.sh
-    - echo "show packages package package-version" | ncs_cli -u admin
-    - echo "show packages package oper-status" | ncs_cli -u admin
     - ncs_load -lm nso/ci_setup.xml -u admin
     - ncs_load -lm nso/load_devices.xml -u admin
     - echo "request devices fetch-ssh-host-keys" | ncs_cli -u admin
     - echo "request devices sync-from" | ncs_cli -u admin
-    - echo "show devices list" | ncs_cli -u admin
     - cd test; python3 -m pytest -sv dryrun_tests/test_config_dns.py
 
 Test config-ntp Package:
@@ -65,13 +61,10 @@ Test config-ntp Package:
     - ln -s /opt/ncs/current/packages/neds/cisco-ios-cli-3.8 /nso/run/packages/cisco-ios-cli
     - /run-nso.sh > /dev/null 2>&1 &
     - bash nso/check_nso_readiness.sh
-    - echo "show packages package package-version" | ncs_cli -u admin
-    - echo "show packages package oper-status" | ncs_cli -u admin
     - ncs_load -lm nso/ci_setup.xml -u admin
     - ncs_load -lm nso/load_devices.xml -u admin
     - echo "request devices fetch-ssh-host-keys" | ncs_cli -u admin
     - echo "request devices sync-from" | ncs_cli -u admin
-    - echo "show devices list" | ncs_cli -u admin
     - cd test; python3 -m pytest -sv dryrun_tests/test_config_ntp.py
 
 Clean Up CML:
