(CI): Update the name of the testing stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
     - Build
     - Load Config to CML
     - Check Connection
-    - NSO Dryrun Tests
+    - Run NSO Pytest Tests
     - Clean Up CML
 
 Compile NSO Packages:
